--- a/Shared-SwiftUI-Content-Info.plist
+++ b/Shared-SwiftUI-Content-Info.plist
@@ -6,5 +6,14 @@
 	<array>
 		<string>otherApp</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+    </array>
 </dict>
 </plist>
