Добавил код для нескольких статей
73, 75, 78, 79, 80, 81, 82, 83, 85

--- a/Shared SwiftUI Content.xcodeproj/xcshareddata/xcschemes/Shared SwiftUI Content.xcscheme
+++ b/Shared SwiftUI Content.xcodeproj/xcshareddata/xcschemes/Shared SwiftUI Content.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6720DDF52C5E5AAE00EEB450"
+               BuildableName = "Shared SwiftUI ContentTests.xctest"
+               BlueprintName = "Shared SwiftUI ContentTests"
+               ReferencedContainer = "container:Shared SwiftUI Content.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
