Добавил код для статьи № 126
AppStorage для кастомных типов

--- a/Shared SwiftUI Content.xcodeproj/xcshareddata/xcschemes/Shared SwiftUI Content.xcscheme
+++ b/Shared SwiftUI Content.xcodeproj/xcshareddata/xcschemes/Shared SwiftUI Content.xcscheme
@@ -45,6 +45,17 @@
                ReferencedContainer = "container:Shared SwiftUI Content.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6716AA972E192F4F0057E199"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:Shared SwiftUI Content.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
